add some effect, have level in json

--- a/preview-template/index.ejs
+++ b/preview-template/index.ejs
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <p class="footer">
-                    Created with <a href="https://www.cocos.com/products" target="_blank" title="Cocos Creator">Cocos Creator</a>
+                    Nghịch ngu cùng <a href="https://www.cocos.com/products" target="_blank" title="Cocos Creator">Cocos Creator</a>
                 </p>
             </div>
         </div>
